# Notes

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: app.hpp  exporter.hpp  note.hpp  note_storage.hpp  precompiled.hpp  view_model.hpp
include/exporters/: txt.hpp
src/: app.cpp  main.cpp  note.cpp  note_storage.cpp  view_model.cpp
src/exporters/: txt.cpp
ui/: package-lock.json  package.json  webpack.config.js
ui/src/: index.js
ui/src/components/: editor.vue  note.vue
ui/src/views/: app.vue
